--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ img {
     display: flex;
     align-items: center;
     background-color: var(--color-text); /* Fallback color */
-    background-image: linear-gradient(135deg, rgba(34, 34, 34, 0.8), rgba(77, 77, 77, 0.8)), url(<?php echo BASE_URL; ?>assets/img/hero-section.webp);
+    background-image: linear-gradient(135deg, rgba(34, 34, 34, 0.8), rgba(77, 77, 77, 0.8)), url(../img/hero-section.webp);
     background-size: cover;
     background-position: center;
     color: var(--color-background);
